2010-05-04
* small speedup for BusyBox (40 characters should be enough for the BusyBox
version number)
* stub for XML reporting for BusyBox, not yet used
* cleanup fsmagic.py, add markers for cpio archives

2010-05-01
* remove some calls to addDocument() in the extractkernel* scripts, since they
are unnecessary. It also brings down the size of the Lucene indexes with about
a quarter, and lets the scripts run a bit faster.

2010-04-30
* remove a marker string for U-Boot which falsely identified some instances of
CFE as possibly U-Boot

2010-04-27
* add a check for loadlin, which you can still find in some embedded devices
* speedup for BusyBox version extraction
* speedup for Linux kernel version extraction

2010-04-26
* close files when we don't need them anymore. This prevents running out of
limits for open files.

2010-04-23
* add more documentation for the bruteforce scanning tool

2010-04-21
* add first scan for U-Boot. More marker strings need to be added to make it more reliable.

2010-04-18
* remove wrong marker line for ALSA, leading to false positives
* add LZMA decompression. This is not too reliable according to Debian bug #364260

2010-04-17
* add basic pretty printing
* speedup scanning for BusyBox version number
* Python 2.5 compatibility fixes (thanks to Brett Smith)
* only check for module license strings in actual modules
* return the correct offset for finding squashfs file systems
* filter out more files, that are not immediately interesting, like HTML pages
* add the kernel checks from the kernelanalysis script to the brute force scanner

2010-04-16
* add scan for RedBoot to brute force scanning tool
* add scan for wireless tools to brute force scanning tool
* add scan for dynamically linked libraries to brute force scanning tool
* add scan for licenses in kernel modules to brute force scanning tool

2010-04-15 - initial release